minor refactor to JabRefDialogService
1. replace multiple if-else to switch case
2. remove unused generics `<V>`
3. replace `.collect(Collectors.toList())` to `.toList()`
4. remove unnecessary braces